# Elecard_test_task

./: .gitmodules  CMakeLists.txt  Makefile  README.md  bmp.c  convert.c  convert.cpp  convert.h  cscope.out  fs.c  gl_core_3_2.c  gl_core_3_3.c  main.c  main.cpp  render.c  render.cpp  render.h
include/: render.h
src/: CMakeLists.txt  bmp.cpp  convert.cpp  fs.cpp  main.cpp
src/include/: bmp.h  cmake_config.h  cmake_config.h.in  convert.h  fs.h  gl_core_3_3.h  render.h
src/tests/: vector_test.cpp
tests/: vector_test.cpp
